feat: add all endpoints to swagger
